tests/subtyping/type-cast/ill-typed/type-cast-1.stella
language core;
extend with #type-cast, #top-type;

fn main(a : Top) -> Bool {
  return a cast as Nat
}
